# my_project

./: README.md
C_C++/: problem1  problem1.c  test_man  test_man.c
Micro_controller/ESP32/mini_project/src/: main.cpp
Python/: test_app.py
ROS2/intern/intern_task/install/: local_setup.sh  setup.bash  setup.sh  setup.zsh
ROS2/intern/intern_task/install/myfirstbot/share/myfirstbot/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
ROS2/intern/intern_task/install/robot_launch/lib/robot_launch/: delta_motor  delta_odom
ROS2/intern/intern_task/install/robot_launch/share/robot_launch/: package.sh  package.xml
ROS2/intern/intern_task/install/ros2_topic/share/ros2_topic/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
ROS2/intern/intern_task/log/: latest_build
ROS2/intern/intern_task/src/Microros2/: platformio.ini
ROS2/intern/intern_task/src/Microros2/src/: main.cpp
ROS2/intern/intern_task/src/robot_launch/: auto_update_setup.py  package.xml  setup.py
ROS2/intern/intern_task/src/robot_launch/launch/: runscript.launch.py
ROS2/intern/intern_task/src/robot_launch/robot_launch/: delta_motor.py  delta_odom.py
ROS2/intern/intern_task/src/ros2_topic/: package.xml  setup.cfg  setup.py  update_setup.py
ROS2/intern/intern_task/src/ros2_topic/ros2_topic/: topic_pub.py
ROS2/intern/intern_task/src/task_service/: CMakeLists.txt  auto_update.py  package.xml
ROS2/intern/intern_task/src/task_service/action/: ClassRoom.action  ControlServo.action  CountUntil.action  DeliveryItems.action  Feedbackservo.action  TurnMotor.action
ROS2/intern/intern_task/src/task_service/src/: Room.py  clean.py  cli_count_until.py  count_until.py  delivery_client.py  delivery_server.py  multi_cli_add.py  multi_srv.py  pir_lis.py  pub.py  servo_control.py  sub.py  turn_motor_action.py
ROS2/intern/intern_task/src/task_service/srv/: CustomTwist.srv  DeliveryRequest.srv
ROS2/intern/joycontrol/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
ROS2/intern/joycontrol/install/joy_config/share/joy_config/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
ROS2/intern/joycontrol/log/: latest_build
ROS2/intern/joycontrol/src/joy_config/: package.xml  setup.cfg  setup.py
ROS2/intern/joycontrol/src/joy_config/config/: xbox_control.yaml
ROS2/intern/joycontrol/src/joy_config/launch/: xbox_start.launch.py
ROS2/intern/launch_bot/install/: local_setup.sh  setup.ps1  setup.sh
ROS2/intern/launch_bot/log/: latest_build
ROS2/intern/launch_bot/src/my_pack/: package.xml  setup.py
ROS2/intern/launch_bot/src/my_pack/launch/: launch_robot.launch.py
ROS2/intern/lidar_test/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
ROS2/intern/lidar_test/log/: latest_build
ROS2/intern/lidar_test/src/test_lidar/: package.xml  setup.cfg  setup.py
ROS2/intern/lidar_test/src/test_lidar/test_lidar/: test_lidarnode.py
ROS2/intern/my_pack_ws/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
ROS2/intern/my_pack_ws/log/: latest_build
ROS2/intern/my_pack_ws/src/my_pack/: package.xml  setup.py
ROS2/intern/my_pack_ws/src/my_pack/my_pack/: paramcontrol.py
(+35 files in other folders)
